# hermes-cmx

./: .gitignore  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml
benchmarks/: README.md  _judge_ablation.py  _matrix_one.py  analyze_matrix.py  calib_abstain.py  live_inhost_test.py  recall_chunks.py  recall_diag.py  run_diagnostic.py  run_eval.py  run_finalists.py  run_forcing_ablation.py  run_forcing_bench.py  run_gate_sweep.py  run_lever_bench.py  run_lock_confirm.py  run_locomo_eval.py  run_multihop_bench.py  run_real_eval.py  run_rescore.py  run_teach_ab.py  run_vs_lcm.py  synthetic.py
benchmarks/results/: README.md  TEACH-AB.md  h2-live-smoke.md  iter2-FINAL-assessment.md  iter2-lever1-embeddings.md  iter2-lever2-toolloop.md  iter2-lever3-queryexpansion.md  iter2-lever4-reranking.md  iter2-lever5-higherk.md  iter3-L2-sufficiency.md  (+30 more)
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-GROUNDING-ENFORCEMENT.md  03-ADAPTIVITY.md  04-EVALUATION.md  05-IMPLEMENTATION-PLAN.md  06-RISKS-OPEN-QUESTIONS.md  07-HOST-INTEGRATION-H2.md
examples/: 01_store_and_retrieve.py  02_survives_session_rotation.py  03_grounded_answer.py  04_refuse_to_guess.py  README.md
tests/: conftest.py  test_assembly.py  test_conversation.py  test_council_judge.py  test_durable.py  test_embeddings.py  test_enforcement.py  test_engine_e2e.py  test_eval_harness.py  test_expand.py  test_forcing.py  test_graph.py  test_hermes_engine.py  test_migrate.py  test_profiles.py  test_rerank_signals.py  test_retrieval.py  test_session_lineage.py  test_store.py  test_thread_safety.py  test_tokenizer.py
(+55 files in other folders)
